fix left side bar overflow bug

--- a/style.css
+++ b/style.css
@@ -75,13 +75,13 @@ body {
 }
 
 #container.tab-opened #left-side-bar #memo-list div {
-    width: 300px;
+    width: 100%;
     height: 60px;
-    text-overflow: ellipsis;
     font-size: 1rem;
     padding: .3rem 1.5rem;
     overflow: hidden;
-
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #container.tab-closed #left-side-bar #memo-list div {
